# mesa_behaviors

./: pyproject.toml  setup.py  tox.ini
mesa_behaviors/: __init__.py
mesa_behaviors/agents/: agents.py  base_agent.py  population.py
mesa_behaviors/history/: base_history.py  binary.py  history.py
mesa_behaviors/models/: base_model.py  model.py
mesa_behaviors/strategies/: binary_strategy.py  strategy.py
mesa_behaviors/utility/: base_utility.py  binary.py  utility.py
tests/agents/: test_agents.py  test_population.py
tests/fixtures/: agents.py  models.py  strategy.py  utility.py
tests/models/: test_models.py
tests/utility/: test_binary.py
